--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -8,8 +8,8 @@
   <h1>Login Page</h1>
 
  <form method="post" action="/login">
-     Username : <input name="username" type="text">
-     Password: <input name="password" type="password">
+     Username : <input name="username" type="text"><br>
+     Password: <input name="password" type="password"><br>
      <input type="submit" value="Submit">
  </form>
 </body>
